# grpc_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pch.h  vcpkg.json
client/: CMakeLists.txt  Main.cpp
protos/: CMakeLists.txt
protos/myproto/: grpc_test.proto
server/: CMakeLists.txt  Main.cpp
tests/: CMakeLists.txt  Main.cpp
